**தமிழ்நாடு மாணவர் கணினித் திட்டம்**
- # தமிழ்நாடு மாணவர் கணினித் திட்டம்
- n. தேரி
- மணற்குன்று.


**anchored dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- தாவர நிலைப்பு மணற்குன்று


**attached dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- இணைத்த குன்று
-  திட்டு


**climbing dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- ஏறு மணற்குன்று

[ புவியியல்   ]
- காற்றுவழி மணற்குன்று


**coastal dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- கடற்கரை மணற்குன்று

[ புவியியல்   ]


**complex dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- கலப்பு மணற்குன்று

[ புவியியல்   ]

**தமிழ்க் கல்வி அகராதி**
- [ உயிரியல்   ]
- (மணல்) திட்டு

[ பொறியியல் தொழில்நுட்பம்   ]
- திட்டுமேடு
[ சூழலியல்   ]
- மணற்குன்று
[ புவியியல்   ]
- (மணல்) திட்டுமேடு


**dune complex**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- திட்டுத்தொகுதி

[ புவியியல்   ]
- (மணல்) திட்டுத்தொகுதி


**dunes and dune erosion**
**தமிழ்க் கல்வி அகராதி**
- [ சூழலியல்   ]
- மணற்குன்றும் மணற்குன்றின் அரிமானமும்


**eolian dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- காற்றியக்க மணல்மேடு

[ புவியியல்   ]


**fore dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- கரை இணை மணற்குன்று


**fossil dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- புதைபடிம மணற்குன்று

[ புவியியல்   ]
- புதைபடிவ மணற்குன்று


**lee dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- லீ மணற்குன்று

[ புவியியல்   ]


**longitudinal dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- நெடுக்கு மணற்குன்று

[ புவியியல்   ]


**parabolic dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- பரவளைய மண்மேடு

[ புவியியல்   ]


**reversible dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- எதிரிடை மணற்குன்று

[ புவியியல்   ]


**sand dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- மணல்மேடு

[ புவியியல்   ]


**seif dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- காற்று வீச்சு மணற்குன்று

[ புவியியல்   ]
- காற்றுவீச்சு மணற்குன்று


**shrubcoppice dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- புல்புதர் மேடு

[ புவியியல்   ]
- புல் புதர்மேடு


**sigmoidal dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- S-வடிவ மணற்குன்று

[ புவியியல்   ]
- சிக்மா எழுத்து வடிவ மணற்குன்று


**snow dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- பனிமேடு


**subaqueous dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- நீரடி மணல்மேடு

[ புவியியல்   ]


**transverse dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- குறுக்கு மணற்குன்று

[ புவியியல்   ]
- குறுக்கு மணற்மேடு


**wandering dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- அலைதிரி மண்மேடு

[ சூழலியல்   ]
- அலைவுறு மணல்மேடுகள்
[ புவியியல்   ]
- திரிந்தலை மண்மேடு


**whaleback dune**
**தமிழ்க் கல்வி அகராதி**
- [ பொறியியல் தொழில்நுட்பம்   ]
- திமிங்கில மணற்குன்று

[ புவியியல்   ]
- திமிங்கல மணற்குன்று

**ttak_eng_tam**
- -
- பெயர்
- -
- தேரி
- மணற்குன்று


**advanced sand dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   முன்னணிமணற்குன்று
-


**coastal dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   கடற்கரை மணற்குன்று/ கரையோர மணற்குன்று
-


**crescentic dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   பிறைவடிவக் குன்று
-


**forest dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   மணற்காடு
-


**lateral dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   பக்க மணற்குன்று
-


**longitudinal dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   நெட்டாங்கு – மணற்குன்று; நெடுக்கு மணற்குன்று
-


**parabolic dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   பரவளைய மண்மேடு
-  பரவளைவு மணற்குன்று
-


**sand dune belt**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   எக்கர்ப் பட்டை
-


**seif dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   நெடுமணற்குன்று/ காற்று வீச்சு மணற்குன்று/ காற்றுவீச்சு மணற்குன்று
-


**snow dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   பனிக்குன்று
-  பனிமேடு
-


**wandering dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   திரியும் மணற்குவை
-  திரிந்தலை மண்மேடு
-  அலைவு மண்குதிர்
-  அலைதிரி மண்மேடு
-  அலைவுறு மணல்மேடுகள்
-


**whaleback dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   திமிங்கிலமுதுகுமணற்குன்று திமிங்கிலமுதுகு எக்கர்
-  திமிங்கில மணற்குன்று
-  திமிங்கல மணற்குன்று
-


**anchored dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   தாவர நிலைப்பு மணற்குன்று
-


**attached dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   திட்டு;- இணைத்த குன்று
-


**climbing dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   காற்றுவழி மணற்குன்று
-  ஏறு மணற்குன்று
-


**coastal dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   கடற்கரை மணற்குன்று/ கரையோர மணற்குன்று
-


**complex dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   கலப்பு மணற்குன்று
-


**dune complex**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   திட்டுத்தொகுதி
-

**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   மணற்குன்று/ குவிக்குன்று: மணல்மேடு
-  திட்டுமேடு
-  திட்டு
-


**dunes and dune erosion**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   மணற்குன்றும் மணற்குன்றின் அரிமானமும்
-


**eolian dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   காற்றியக்க மணல்மேடு
-


**fore dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   கரை இணை மணற்குன்று
-


**fossil dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   புதைபடிம மணற்குன்று
-  புதைபடிவ மணற்குன்று
-


**lee dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   லீ மணற்குன்று
-


**longitudinal dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   நெட்டாங்கு – மணற்குன்று; நெடுக்கு மணற்குன்று
-


**parabolic dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   பரவளைய மண்மேடு
-  பரவளைவு மணற்குன்று
-


**reversible dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   எதிரிடை மணற்குன்று
-


**sand dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   மணற்குன்று: மணல்மேடு Sand dune எக்கர்: மணல்மேடு
-


**seif dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   நெடுமணற்குன்று/ காற்று வீச்சு மணற்குன்று/ காற்றுவீச்சு மணற்குன்று
-


**shrub coppice dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   புல்புதர் மேடு
-  புல் புதர்மேடு
-


**sigmoidal dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   S வடிவ மணற்குன்று// சிக்மா எழுத்து வடிவ மணற்குன்று
-


**snow dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   பனிக்குன்று
-  பனிமேடு
-


**subaqueous dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   நீரடி மணல்மேடு
-


**transverse dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   குறுக்கு மணற்குன்று/ குறுக்கு மணற்மேடு
-


**wandering dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   திரியும் மணற்குவை
-  திரிந்தலை மண்மேடு
-  அலைவு மண்குதிர்
-  அலைதிரி மண்மேடு
-  அலைவுறு மணல்மேடுகள்
-


**whaleback dune**
**சொற்குவை - அகரமுதலித் திட்ட இயக்ககம்**
- -   திமிங்கிலமுதுகுமணற்குன்று திமிங்கிலமுதுகு எக்கர்
-  திமிங்கில மணற்குன்று
-  திமிங்கல மணற்குன்று
-

